# korean-law-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  QUICK_START.md  README.md  README_TAX_REVIEW.md  README_TAX_REVIEW_V2.md  USAGE_GUIDE.md  check_setup.bat  claude_desktop_config.json  pyproject.toml  requirements.txt  restart_server.ps1  restart_server.sh  run_server.py  setup_claude_desktop.bat  test_gemini.py
src/: __init__.py  disposition_analyzer.py  historical_law_search.py  history_tools.py  hwpx_parser.py  main.py  tax_case_review.py  tax_case_review_v2.py  tax_case_review_v3.py  tax_law_agent.py  tax_review_main.py  tax_review_v2_main.py  tax_review_v3_main.py  tools.py
